--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "mongoose": "^4.9.8"
+    "mongoose": "^4.9.8",
+    "request": "^2.81.0"
   }
 }
