--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "libavilityScoreApi",
+  "name": "livabilityScoreApi",
   "version": "1.0.0",
-  "description": "RESTful libavilityScoreApi",
+  "description": "RESTful livabilityScoreApi",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ItsSelina/libavilityScore.git"
+    "url": "git+https://github.com/ItsSelina/livabilityScore.git"
   },
   "keywords": [
     "API"
@@ -27,6 +27,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "mongoose": "^4.9.8",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
